--- a/public/asset/frontend/css/style.css
+++ b/public/asset/frontend/css/style.css
@@ -92,6 +92,10 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   font-family: "Poppins", sans-serif;
   letter-spacing: -0.03em;
 }
+.hover-blue:hover {
+    color: blue; /* เปลี่ยนสีตัวอักษรเป็นสีฟ้าเมื่อโฮเวอร์ */
+}
+
 
 h1, .h1 {
   font-size: 36px;
